Run workflows when configuration changes
When a workflow configuration is updated, the workflow should be run to
ensure that it works correctly.

--- a/.github/workflows/json.yml
+++ b/.github/workflows/json.yml
@@ -6,9 +6,11 @@ name: JSON
     branches:
       - main
     paths:
+      - ".github/workflows/json.yml"
       - "**.json"
   pull_request:
     paths:
+      - ".github/workflows/json.yml"
       - "**.json"
 
 jobs:
