--- a/.github/workflows/shell.yml
+++ b/.github/workflows/shell.yml
@@ -6,9 +6,11 @@ name: Shell
     branches:
       - main
     paths:
+      - ".github/workflows/shell.yml"
       - "**.sh"
   pull_request:
     paths:
+      - ".github/workflows/shell.yml"
       - "**.sh"
 
 jobs:
