Update pre-commit hooks
The pre-commit hooks have been updated to their latest version, and
Renovate has been configured to keep them up-to-date going forward.

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,5 +1,12 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base", ":disableDependencyDashboard"],
-  "semanticCommits": "disabled"
+
+  "pre-commit": {
+    "enabled": true
+  },
+  "semanticCommits": "disabled",
+
+  "assignees": ["jdno"],
+  "reviewers": ["jdno"]
 }
